For the latest news, visit the SparForte web site.

Objective: Bug fixes following 2.5 and reducing technical debt.  Foundations of AI.

CHANGES SINCE 2.5

1. New: --session option to store history and local profiles under alternate names.

2. New: System.Session_Name to read the name from --session.

